# kramer

./: .gitignore  Cargo.toml  README.md  bench_result.json  results_1600.pgn  results_1800.pgn
kramer-magic-bb/: Cargo.toml
kramer-magic-bb/src/: bishop_attacks.rs  bishop_mask.rs  lib.rs  magics.rs  rook_attacks.rs  rook_mask.rs
kramer-magic-gen/: Cargo.toml
kramer-magic-gen/src/: bishop.rs  bishop_mask.rs  main.rs  queen_mask.rs  rook.rs  rook_mask.rs
releases/v0_1_0/: bench_result.json  metadata.json
releases/v0_2_0/: bench_result.json  metadata.json
releases/v0_3_0/: bench_result.json  metadata.json
releases/v0_4_0/: bench_result.json  metadata.json
releases/v0_5_0/: bench_result.json  metadata.json
scripts/: ELO.md  SCRIPTS.md  regression.py  release.py
src/: board.rs  cli.rs  engine.rs  error.rs  fen.rs  lib.rs  logging.rs  main.rs  move_ordering.rs  moves.rs  perft.rs  time.rs  tt.rs  uci.rs  zobrist.rs
src/board/: eval.rs  generation.rs  king.rs  knight.rs  legality_filter.rs  pawns.rs  search.rs  sliding_pieces.rs
src/board/eval/: passed_pawns.rs  pst.rs
