[workspace]
members = []

[package]
name = "kramer"
version = "0.1.0"
edition = "2024"

[lib]
name = "kramer_core"
path = "src/lib.rs"

[[bin]]
name = "kramer"
path = "src/main.rs"

[dependencies]
thiserror = "2"
vampirc-uci = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
directories = "6"
