[workspace]
members = ["kramer-magic-bb","kramer-magic-gen"]

[package]
name = "kramer"
version = "0.1.0"
edition = "2024"

[lib]
name = "kramer_core"
path = "src/lib.rs"

[[bin]]
name = "kramer"
path = "src/main.rs"

[[bin]]
name = "kramer_bench"
path = "src/bin/bench.rs"

[dependencies]
thiserror = "2"
vampirc-uci = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
directories = "6"
kramer-magic-bb = { path = "./kramer-magic-bb" }
crossbeam = "0.8"
clap = { version = "4", features = ["derive"] }
open = "5"
miette = { version = "7", features = ["fancy"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
